Coinshop and /buykit

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -325,6 +325,9 @@ commands:
   Coinshop:
     description: Open the coinshop for the player.
     usage: /Coinshop
+  buykit:
+    description: Buy a kit with coins
+    usage: /buykit <Player> <donator/premium or team/map> <kit>
 
 
   # Kits
