Added messages about donating and free fridays

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -331,6 +331,8 @@ commands:
   Webshop:
     description: Sends the link of the webshop to the commandsender.
     usage: /Webshop
+    aliases:
+      - donate
   Coinshop:
     description: Open the coinshop for the player.
     usage: /Coinshop
