Allow setting random kit with /setkit
To set a random kit, simply leave out the kit parameter

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -282,7 +282,7 @@ commands:
     permission-message: You are not permitted to use this command!
   SetKit:
     description: Sets the kit for a player
-    usage: /kit <player> <kit>
+    usage: /kit <player> [kit]
     permission: castlesiege.developer
     permission-message: You are not permitted to use this command!
   SetMap:
