--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -334,6 +334,10 @@ commands:
     usage: /start
     permission: castlesiege.moderator
     permission-message: You are not permitted to use this command!
+  SetTag:
+    description: Set a nametag prefix
+    usage: /settag <tag>
+    permission: castlesiege.developer
 
   # Donations
   Unlockkit:
