Add top for kdr, heals, and supports

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -186,6 +186,9 @@ commands:
   TopDeaths:
     description: Shows the deaths leaderboard
     usage: /topdeaths [position]
+  TopKDR:
+    description: Shows the kdr leaderboard
+    usage: /topkdr [position]
   TopKills:
     description: Shows the kills leaderboard
     usage: /topkills [position]
