--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: CastleSiege
 main: me.huntifi.castlesiege.Main
-version: 1.2.1
+version: 1.2.2
 api-version: 1.13
 authors: [Huntifi, Greenfoot5, kasteelvuur]
-depends: [Votifier, WorldGuard, NametagEdit]
+depends: [Votifier, WorldGuard, NametagEdit, Citizens]
 softdepend: [LibsDisguises, WorldEdit]
 load: STARTUP
 
