Revert "GitHub being a weirdo"
This reverts commit 1014dbfd2758282aae96f7b9db88cfc9a5f66864.

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ main: me.huntifi.castlesiege.Main
 version: 1.2.2
 api-version: 1.13
 authors: [Huntifi, Greenfoot5, kasteelvuur]
-depends: [Votifier, WorldGuard, NametagEdit, Citizens, Sentinel]
+depends: [Votifier, WorldGuard, NametagEdit, Citizens]
 softdepend: [LibsDisguises, WorldEdit]
 load: STARTUP
 
