--- a/ConwyCastleSiege/src/main/resources/kits.yml
+++ b/ConwyCastleSiege/src/main/resources/kits.yml
@@ -53,9 +53,9 @@ free:
         - "§6------------------------------"
         - "§2[Desc]:§a The standard ranged kit."
         - "§2[Health]:§a 130"
-        - "§2[Melee Damage]:§a 33"
-        - "§2[Ranged Damage]:§a 26"
-        - "§2[Regen]:§a 4"
+        - "§2[Melee Damage]:§a 26"
+        - "§2[Ranged Damage]:§a 45+"
+        - "§2[Regen]:§a 10.5"
         - "§2[Status]:§a Free to play!"
         - "§6------------------------------"
       location: 10
@@ -66,10 +66,10 @@ free:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A kit that can throw spears."
-        - "§2[Health]:§a 190"
-        - "§2[Melee Damage]:§a 40"
+        - "§2[Health]:§a 160"
+        - "§2[Melee Damage]:§a 36"
         - "§2[Ranged Damage]:§a 36"
-        - "§2[Regen]:§a 5"
+        - "§2[Regen]:§a 10.5"
         - "§2[Ability]:§a Spears can be thrown by right-clicking."
         - "§2[Status]:§a Free to play!"
         - "§6------------------------------"
@@ -82,8 +82,8 @@ free:
         - "§6------------------------------"
         - "§2[Desc]:§a The standard melee kit."
         - "§2[Health]:§a 200"
-        - "§2[Melee Damage]:§a 36"
-        - "§2[Regen]:§a 5.5"
+        - "§2[Melee Damage]:§a 33"
+        - "§2[Regen]:§a 10.5"
         - "§2[Status]:§a Free to play!"
         - "§6------------------------------"
       location: 16
@@ -96,8 +96,8 @@ free:
         - "§2[Desc]:§a A slow archer that can put enemies on fire."
         - "§2[Health]:§a 140"
         - "§2[Melee Damage]:§a 26"
-        - "§2[Ranged Damage]:§a ??"
-        - "§2[Regen]:§a 4"
+        - "§2[Ranged Damage]:§a 10+"
+        - "§2[Regen]:§a 9"
         - "§2[Effects]:§a Slowness 1"
         - "§2[Ability]:§a Can put down a firepit. By clicking the"
         - "§2[Ability]:§a firepit with arrows, you create fire-arrows."
@@ -112,8 +112,8 @@ free:
         - "§6------------------------------"
         - "§2[Desc]:§a A useful kit for climbing up walls."
         - "§2[Health]:§a 185"
-        - "§2[Melee Damage]:§a 36"
-        - "§2[Regen]:§a 5"
+        - "§2[Melee Damage]:§a 35"
+        - "§2[Regen]:§a 10"
         - "§2[Effects]:§a Jump Boost 2"
         - "§2[Status]:§a Voter kit."
         - "§6------------------------------"
@@ -124,9 +124,9 @@ free:
       material: "SHIELD"
       lore:
         - "§6------------------------------"
-        - "§2[Desc]:§a A tank melee kit with a shield."
+        - "§2[Desc]:§a A tanky melee kit with a shield."
         - "§2[Health]:§a 190"
-        - "§2[Melee Damage]:§a 36"
+        - "§2[Melee Damage]:§a 35"
         - "§2[Regen]:§a 6"
         - "§2[Effects]:§a Resistance 1, Slowness 1, Mining Fatigue 1"
         - "§2[Status]:§a Voter kit."
@@ -140,8 +140,8 @@ free:
         - "§6------------------------------"
         - "§2[Desc]:§a A very fast melee kit."
         - "§2[Health]:§a 130"
-        - "§2[Melee Damage]:§a 34"
-        - "§2[Regen]:§a 4"
+        - "§2[Melee Damage]:§a 30"
+        - "§2[Regen]:§a 9"
         - "§2[Effects]:§a Speed 2, Jump Boost 1"
         - "§2[Effects]:§a Haste 2"
         - "§2[Status]:§a Voter kit."
@@ -155,8 +155,8 @@ free:
         - "§6------------------------------"
         - "§2[Desc]:§a A more mobile melee kit."
         - "§2[Health]:§a 185"
-        - "§2[Melee Damage]:§a 37"
-        - "§2[Regen]:§a 5"
+        - "§2[Melee Damage]:§a 35"
+        - "§2[Regen]:§a 10"
         - "§2[Effects]:§a Speed 1, Jump Boost 1"
         - "§2[Effects]:§a Haste 2"
         - "§2[Status]:§a Voter kit."
@@ -180,12 +180,12 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a An armorless warrior with high dps and speed."
-        - "§2[Health]:§a 110"
-        - "§2[Melee Damage]:§a 37"
-        - "§2[Regen]:§a 3"
+        - "§2[Health]:§a 100"
+        - "§2[Melee Damage]:§a 33"
+        - "§2[Regen]:§a 12"
         - "§2[Effects]:§a Speed 1"
         - "§2[Ability]:§a Go berserk by drinking a potion, giving"
-        - "§2[Ability]:§a Speed 2, Strength 1, Nausea 1"
+        - "§2[Ability]:§a Speed 2, huge damage boost, Nausea 3"
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
       location: 10
@@ -198,7 +198,7 @@ premium:
         - "§2[Desc]:§a A warrior with the ability to charge."
         - "§2[Health]:§a 195"
         - "§2[Melee Damage]:§a 37"
-        - "§2[Regen]:§a 6"
+        - "§2[Regen]:§a 11"
         - "§2[Effects]:§a Jump Boost 1, Haste 2"
         - "§2[Ability]:§a Charge at high speed and deal more damage on impact."
         - "§2[Status]:§a Unlocked with coins."
@@ -212,8 +212,8 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A kit with the ability to execute enemies."
         - "§2[Health]:§a 150"
-        - "§2[Melee Damage]:§a 40"
-        - "§2[Regen]:§a 7"
+        - "§2[Melee Damage]:§a 33"
+        - "§2[Regen]:§a 10"
         - "§2[Ability]:§a Insta-kills enemies that are below 40% hp."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
@@ -226,10 +226,10 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A kit with the ability to stun enemies."
         - "§2[Health]:§a 170"
-        - "§2[Melee Damage]:§a 33"
-        - "§2[Regen]:§a 7"
+        - "§2[Melee Damage]:§a 27"
+        - "§2[Regen]:§a 10"
         - "§2[Ability]:§a Hits enemies with extra force,"
-        - "§2[Ability]:§a causing Blindness 2 and more."
+        - "§2[Ability]:§a causing you to stun them."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
       location: 16
@@ -242,7 +242,7 @@ premium:
         - "§2[Desc]:§a A kit with the ability to ignore armor."
         - "§2[Health]:§a 195"
         - "§2[Melee Damage]:§a 30% of max health"
-        - "§2[Regen]:§a 5"
+        - "§2[Regen]:§a 10"
         - "§2[Effects]:§a Slowness 1, Mining Fatigue 1"
         - "§2[Ability]:§a Deals % of max health"
         - "§2[Status]:§a Unlocked with coins."
@@ -255,9 +255,9 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A tank kit that deals extra damage to mounted units."
-        - "§2[Health]:§a 320"
-        - "§2[Melee Damage]:§a 41"
-        - "§2[Regen]:§a 16"
+        - "§2[Health]:§a 384"
+        - "§2[Melee Damage]:§a 48"
+        - "§2[Regen]:§a 23"
         - "§2[Effects]:§a Slowness 3, Mining Fatigue 2, Resistance 1"
         - "§2[Ability]:§a Deals 50% more damage to mounted units."
         - "§2[Status]:§a Unlocked with coins."
@@ -271,8 +271,8 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A support kit that heals allies."
         - "§2[Health]:§a 110"
-        - "§2[Melee Damage]:§a 33"
-        - "§2[Regen]:§a 8"
+        - "§2[Melee Damage]:§a 26"
+        - "§2[Regen]:§a 11"
         - "§2[Effects]:§a Speed 1"
         - "§2[Ability]:§a Heals allies on right-click with bandages."
         - "§2[Ability]:§a Can place cakes on the ground to heal allies."
@@ -287,8 +287,8 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A support kit that specializes in using tools."
         - "§2[Health]:§a 145"
-        - "§2[Melee Damage]:§a 34"
-        - "§2[Regen]:§a 4"
+        - "§2[Melee Damage]:§a 28"
+        - "§2[Regen]:§a 9"
         - "§2[Effects]:§a Jump Boost 1, haste 1"
         - "§2[Ability]:§a Can place traps and cobwebs, repair walls and wooden"
         - "§2[Ability]:§a structures, refill catapults, and operate ballistae."
@@ -303,10 +303,10 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A support kit that specializes in using tools."
         - "§2[Health]:§a 140"
-        - "§2[Melee Damage]:§a 34"
-        - "§2[Ranged Damage]:§a 27"
-        - "§2[Regen]:§a 3.5"
-        - "§2[Effects]:§a Speed 1, haste 1"
+        - "§2[Melee Damage]:§a 26"
+        - "§2[Ranged Damage]:§a 24"
+        - "§2[Regen]:§a 8.5"
+        - "§2[Effects]:§a Speed 1, Haste 2"
         - "§2[Ability]:§a Can shoot 3 arrows at once with the volley bow."
         - "§2[Ability]:§a Can shoot 3 consecutive arrows with the burst bow."
         - "§2[Ability]:§a Can insta-kill enemies by backstabbing them."
@@ -323,8 +323,8 @@ premium:
         - "§2[Health]:§a 165"
         - "§2[Melee Damage]:§a 1"
         - "§2[Ranged Damage]:§a 35"
-        - "§2[Regen]:§a 4.5"
-        - "§2[Effects]:§a Slowness 2, Haste 2"
+        - "§2[Regen]:§a 9.5"
+        - "§2[Effects]:§a Slowness 2"
         - "§2[Ability]:§a Shoots arrows in a straight line."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
@@ -337,9 +337,10 @@ premium:
         - "§6------------------------------"
         - "§2[Desc]:§a A basic mounted kit."
         - "§2[Health]:§a 170"
-        - "§2[Melee Damage]:§a 35"
-        - "§2[Regen]:§a 5"
+        - "§2[Melee Damage]:§a 33"
+        - "§2[Regen]:§a 9"
         - "§2[Ability]:§a Right click the wheat to mount your horse."
+        - "§2[Ability]:§a Kick ability does AOE damage."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
       location: 34
@@ -350,11 +351,11 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A special kit where you play as a wolf."
-        - "§2[Health]:§a 90"
-        - "§2[Melee Damage]:§a 25"
-        - "§2[Regen]:§a 7"
+        - "§2[Health]:§a 80"
+        - "§2[Melee Damage]:§a 20"
+        - "§2[Regen]:§a 10"
         - "§2[Effects]:§a Speed 4, Jump Boost 1, Resistance 1, Night Vision 1"
-        - "§2[Ability]:§a Slow down enemies and make them bleed."
+        - "§2[Ability]:§a immobilise enemies and wither."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
       location: 43
@@ -420,10 +421,10 @@ uruk-hai:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a Melee unit that deals AOE damage!"
-        - "§2[Health]:§a 120"
-        - "§2[Melee Damage]:§a 35.0"
-        - "§2[Regen]:§a 3"
-        - "§2[Ability]:§a Cooldown ability that deals 1.5x damage"
+        - "§2[Health]:§a 145"
+        - "§2[Melee Damage]:§a 37.0"
+        - "§2[Regen]:§a 6"
+        - "§2[Ability]:§a Cooldown ability that deals 2.0x damage"
         - "§2[Ability]:§a to all enemies in a 2 block radius."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
@@ -491,9 +492,10 @@ tomb_guardians:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a Basically a wither skeleton"
-        - "§2[Health]:§a 150"
-        - "§2[Melee Damage]:§a 25"
+        - "§2[Health]:§a 220"
+        - "§2[Melee Damage]:§a 27"
         - "§2[Regen]:§a 10"
+        - "§2[Effects]:§a Fire Res, Water Breathing & night vision."
         - "§2[Ability]:§a You deal wither damage on cooldown."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
@@ -588,11 +590,12 @@ thunderstoneGuard:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a Flying unit with healing/explosive support"
-        - "§2[Health]:§a 130"
+        - "§2[Health]:§a 110"
         - "§2[Melee Damage]:§a 20"
-        - "§2[Regen]:§a 5"
+        - "§2[Regen]:§a 7"
         - "§2[Effects]:§a Slow falling, haste and speed"
         - "§2[Ability]:§a Can drop 3 boms, health package, glide in the air!"
+        - "§2[Weakness]:§a Can't capture flags!"
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
         - "§5MAP: Thunderstone"
