--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -218,6 +218,18 @@ commands:
     aliases:
       - topbounty
 
+  # Staff - Coins
+  SetCoins:
+    description: Sets a player's coins
+    usage: /setcoins <player> <amount>
+    permission: castlesiege.moderator
+    permission-message: You are not permitted to use this command!
+  SetCoinMultiplier:
+    description: Sets the active coin multiplier
+    usage: /setcoinmultiplier <multiplier>
+    permission: castlesiege.moderator
+    permission-message: You are not permitted to use this command!
+
 
   # Staff - Punishments
   Ban:
@@ -290,11 +302,6 @@ commands:
   RankPoints:
     description: Manages a player's rank points
     usage: /rankpoints <player> <set | add | remove> <amount>
-    permission: castlesiege.moderator
-    permission-message: You are not permitted to use this command!
-  SetCoinMultiplier:
-    description: Sets the active coin multiplier
-    usage: /setcoinmultiplier <multiplier>
     permission: castlesiege.moderator
     permission-message: You are not permitted to use this command!
   SetKit:
