Add a curse command

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -278,6 +278,11 @@ commands:
     usage: /csreload
     permission: castlesiege.moderator
     permission-message: You are not permitted to use this command!
+  Curse:
+    description: Manages the active curses
+    usage: /curse
+    permission: castlesiege.developer
+    permission-message: You are not permitted to use this command!
   Fly:
     description: Toggle flight
     usage: /fly
