--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ main: me.huntifi.castlesiege.Main
 version: 1.2.2
 api-version: 1.13
 authors: [Huntifi, Greenfoot5, kasteelvuur]
-depends: [Votifier, WorldGuard, NametagEdit]
+depend: [Votifier, WorldGuard, NametagEdit]
 softdepend: [LibsDisguises, WorldEdit]
 load: STARTUP
 
