--- a/ConwyCastleSiege/src/main/resources/kits.yml
+++ b/ConwyCastleSiege/src/main/resources/kits.yml
@@ -52,8 +52,8 @@ free:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a The standard ranged kit."
-        - "§2[Health]:§a 130"
-        - "§2[Melee Damage]:§a 26"
+        - "§2[Health]:§a 230"
+        - "§2[Melee Damage]:§a 36"
         - "§2[Ranged Damage]:§a 45+"
         - "§2[Regen]:§a 10.5"
         - "§2[Status]:§a Free to play!"
@@ -66,8 +66,8 @@ free:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A kit that can throw spears."
-        - "§2[Health]:§a 160"
-        - "§2[Melee Damage]:§a 36"
+        - "§2[Health]:§a 260"
+        - "§2[Melee Damage]:§a 46"
         - "§2[Ranged Damage]:§a 36"
         - "§2[Regen]:§a 10.5"
         - "§2[Ability]:§a Spears can be thrown by right-clicking."
@@ -81,8 +81,8 @@ free:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a The standard melee kit."
-        - "§2[Health]:§a 200"
-        - "§2[Melee Damage]:§a 33"
+        - "§2[Health]:§a 300"
+        - "§2[Melee Damage]:§a 43"
         - "§2[Regen]:§a 10.5"
         - "§2[Status]:§a Free to play!"
         - "§6------------------------------"
@@ -94,8 +94,8 @@ free:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A slow archer that can put enemies on fire."
-        - "§2[Health]:§a 140"
-        - "§2[Melee Damage]:§a 26"
+        - "§2[Health]:§a 240"
+        - "§2[Melee Damage]:§a 36"
         - "§2[Ranged Damage]:§a 10+"
         - "§2[Regen]:§a 9"
         - "§2[Effects]:§a Slowness 1"
@@ -111,8 +111,8 @@ free:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A useful kit for climbing up walls."
-        - "§2[Health]:§a 185"
-        - "§2[Melee Damage]:§a 35"
+        - "§2[Health]:§a 285"
+        - "§2[Melee Damage]:§a 45"
         - "§2[Regen]:§a 10"
         - "§2[Effects]:§a Jump Boost 2"
         - "§2[Status]:§a Voter kit."
@@ -125,8 +125,8 @@ free:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A tanky melee kit with a shield."
-        - "§2[Health]:§a 190"
-        - "§2[Melee Damage]:§a 35"
+        - "§2[Health]:§a 290"
+        - "§2[Melee Damage]:§a 45"
         - "§2[Regen]:§a 6"
         - "§2[Effects]:§a Resistance 1, Slowness 1, Mining Fatigue 1"
         - "§2[Status]:§a Voter kit."
@@ -139,8 +139,8 @@ free:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A very fast melee kit."
-        - "§2[Health]:§a 130"
-        - "§2[Melee Damage]:§a 30"
+        - "§2[Health]:§a 230"
+        - "§2[Melee Damage]:§a 40"
         - "§2[Regen]:§a 9"
         - "§2[Effects]:§a Speed 2, Jump Boost 1"
         - "§2[Effects]:§a Haste 2"
@@ -154,8 +154,8 @@ free:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A more mobile melee kit."
-        - "§2[Health]:§a 185"
-        - "§2[Melee Damage]:§a 35"
+        - "§2[Health]:§a 280"
+        - "§2[Melee Damage]:§a 43"
         - "§2[Regen]:§a 10"
         - "§2[Effects]:§a Speed 1, Jump Boost 1"
         - "§2[Effects]:§a Haste 2"
@@ -180,8 +180,8 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a An armorless warrior with high dps and speed."
-        - "§2[Health]:§a 100"
-        - "§2[Melee Damage]:§a 33"
+        - "§2[Health]:§a 200"
+        - "§2[Melee Damage]:§a 43"
         - "§2[Regen]:§a 12"
         - "§2[Effects]:§a Speed 1"
         - "§2[Ability]:§a Go berserk by drinking a potion, giving"
@@ -196,8 +196,8 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A warrior with the ability to charge."
-        - "§2[Health]:§a 195"
-        - "§2[Melee Damage]:§a 37"
+        - "§2[Health]:§a 260"
+        - "§2[Melee Damage]:§a 47"
         - "§2[Regen]:§a 11"
         - "§2[Effects]:§a Jump Boost 1, Haste 2"
         - "§2[Ability]:§a Charge at high speed and deal more damage on impact."
@@ -211,8 +211,8 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A kit with the ability to execute enemies."
-        - "§2[Health]:§a 150"
-        - "§2[Melee Damage]:§a 33"
+        - "§2[Health]:§a 250"
+        - "§2[Melee Damage]:§a 43"
         - "§2[Regen]:§a 10"
         - "§2[Ability]:§a Insta-kills enemies that are below 40% hp."
         - "§2[Status]:§a Unlocked with coins/money."
@@ -225,8 +225,8 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A kit with the ability to stun enemies."
-        - "§2[Health]:§a 170"
-        - "§2[Melee Damage]:§a 27"
+        - "§2[Health]:§a 280"
+        - "§2[Melee Damage]:§a 37"
         - "§2[Regen]:§a 10"
         - "§2[Ability]:§a Hits enemies with extra force,"
         - "§2[Ability]:§a causing you to stun them."
@@ -240,8 +240,8 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A kit with the ability to ignore armor."
-        - "§2[Health]:§a 195"
-        - "§2[Melee Damage]:§a 30% of max health"
+        - "§2[Health]:§a 260"
+        - "§2[Melee Damage]:§a20 + 30% of max health"
         - "§2[Regen]:§a 10"
         - "§2[Effects]:§a Slowness 1, Mining Fatigue 1"
         - "§2[Ability]:§a Deals % of max health"
@@ -255,8 +255,8 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A tank kit that deals extra damage to mounted units."
-        - "§2[Health]:§a 384"
-        - "§2[Melee Damage]:§a 48"
+        - "§2[Health]:§a 484"
+        - "§2[Melee Damage]:§a 58"
         - "§2[Regen]:§a 23"
         - "§2[Effects]:§a Slowness 3, Mining Fatigue 2, Resistance 1"
         - "§2[Ability]:§a Deals 50% more damage to mounted units."
@@ -270,8 +270,8 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A support kit that heals allies."
-        - "§2[Health]:§a 110"
-        - "§2[Melee Damage]:§a 26"
+        - "§2[Health]:§a 210"
+        - "§2[Melee Damage]:§a 36"
         - "§2[Regen]:§a 11"
         - "§2[Effects]:§a Speed 1"
         - "§2[Ability]:§a Heals allies on right-click with bandages."
@@ -286,8 +286,8 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A support kit that specializes in using tools."
-        - "§2[Health]:§a 145"
-        - "§2[Melee Damage]:§a 28"
+        - "§2[Health]:§a 245"
+        - "§2[Melee Damage]:§a 38"
         - "§2[Regen]:§a 9"
         - "§2[Effects]:§a Jump Boost 1, haste 1"
         - "§2[Ability]:§a Can place traps and cobwebs, repair walls and wooden"
@@ -302,9 +302,9 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A support kit that specializes in using tools."
-        - "§2[Health]:§a 140"
-        - "§2[Melee Damage]:§a 26"
-        - "§2[Ranged Damage]:§a 24"
+        - "§2[Health]:§a 240"
+        - "§2[Melee Damage]:§a 36"
+        - "§2[Ranged Damage]:§a 34"
         - "§2[Regen]:§a 8.5"
         - "§2[Effects]:§a Speed 1, Haste 2"
         - "§2[Ability]:§a Can shoot 3 arrows at once with the volley bow."
@@ -320,7 +320,7 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A ranged kit that functions like a sniper."
-        - "§2[Health]:§a 165"
+        - "§2[Health]:§a 265"
         - "§2[Melee Damage]:§a 1"
         - "§2[Ranged Damage]:§a 35"
         - "§2[Regen]:§a 9.5"
@@ -336,8 +336,8 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A basic mounted kit."
-        - "§2[Health]:§a 170"
-        - "§2[Melee Damage]:§a 33"
+        - "§2[Health]:§a 270"
+        - "§2[Melee Damage]:§a 43"
         - "§2[Regen]:§a 9"
         - "§2[Ability]:§a Right click the wheat to mount your horse."
         - "§2[Ability]:§a Kick ability does AOE damage."
@@ -351,8 +351,8 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A special kit where you play as a wolf."
-        - "§2[Health]:§a 80"
-        - "§2[Melee Damage]:§a 20"
+        - "§2[Health]:§a 160"
+        - "§2[Melee Damage]:§a 30"
         - "§2[Regen]:§a 10"
         - "§2[Effects]:§a Speed 4, Jump Boost 1, Resistance 1, Night Vision 1"
         - "§2[Ability]:§a immobilise enemies and wither."
@@ -366,8 +366,8 @@ premium:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A heal/support kit that uses potions!"
-        - "§2[Health]:§a 140"
-        - "§2[Melee Damage]:§a 26"
+        - "§2[Health]:§a 240"
+        - "§2[Melee Damage]:§a 36"
         - "§2[Regen]:§a 9"
         - "§2[Effects]:§a Speed I"
         - "§2[Ability]:§a Has a brewing stand that can be placed,"
@@ -393,8 +393,8 @@ rohan:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a Cavalry that can use spears!"
-        - "§2[Health]:§a 170"
-        - "§2[Melee Damage]:§a 25.5"
+        - "§2[Health]:§a 270"
+        - "§2[Melee Damage]:§a 35.5"
         - "§2[Regen]:§a 5"
         - "§2[Ability]:§a Right click the wheat to mount your horse."
         - "§2[Ability]:§a Spears can be thrown by right-clicking."
@@ -410,8 +410,8 @@ rohan:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a Cavalry that can use a bow and sword!"
-        - "§2[Health]:§a 130"
-        - "§2[Melee Damage]:§a 19.5"
+        - "§2[Health]:§a 230"
+        - "§2[Melee Damage]:§a 29.5"
         - "§2[Regen]:§a 5"
         - "§2[Ability]:§a Right click the wheat to mount your horse."
         - "§2[Status]:§a Unlocked with coins."
@@ -437,8 +437,8 @@ uruk-hai:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a Melee unit that deals AOE damage!"
-        - "§2[Health]:§a 145"
-        - "§2[Melee Damage]:§a 37.0"
+        - "§2[Health]:§a 245"
+        - "§2[Melee Damage]:§a 47.0"
         - "§2[Regen]:§a 6"
         - "§2[Ability]:§a Cooldown ability that deals 2.0x damage"
         - "§2[Ability]:§a to all enemies in a 2 block radius."
@@ -465,8 +465,8 @@ burning_legion:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A supportive tank with explosive abilities."
-        - "§2[Health]:§a 200"
-        - "§2[Melee Damage]:§a 30.5"
+        - "§2[Health]:§a 300"
+        - "§2[Melee Damage]:§a 40.5"
         - "§2[Regen]:§a 3"
         - "§2[Ability]:§a Right click your fists to create"
         - "§2[Ability]:§a a magma projectile that fires over time."
@@ -487,8 +487,8 @@ hellfire_guards:
         - "§6------------------------------"
         - "§2[Desc]:§a A support horse that can stomp"
         - "§2[Desc]:§a and carry teammates."
-        - "§2[Health]:§a 200"
-        - "§2[Melee Damage]:§a 10"
+        - "§2[Health]:§a 300"
+        - "§2[Melee Damage]:§a 20"
         - "§2[Regen]:§a 7"
         - "§2[Ability]:§a hit someone with stomp to stun enemies."
         - "§2[Ability]:§a Carry around teammates."
@@ -508,8 +508,8 @@ tomb_guardians:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a Basically a wither skeleton"
-        - "§2[Health]:§a 220"
-        - "§2[Melee Damage]:§a 27"
+        - "§2[Health]:§a 320"
+        - "§2[Melee Damage]:§a 37"
         - "§2[Regen]:§a 10"
         - "§2[Effects]:§a Fire Res, Water Breathing & night vision."
         - "§2[Ability]:§a You deal wither damage on cooldown."
@@ -536,8 +536,8 @@ orc:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a An archer with poisonous arrows"
-        - "§2[Health]:§a 130"
-        - "§2[Melee Damage]:§a 19.0"
+        - "§2[Health]:§a 230"
+        - "§2[Melee Damage]:§a 29.0"
         - "§2[Regen]:§a 7"
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
@@ -551,8 +551,8 @@ orc:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A fast melee unit that makes enemies weak"
-        - "§2[Health]:§a 160"
-        - "§2[Melee Damage]:§a 24.0"
+        - "§2[Health]:§a 260"
+        - "§2[Melee Damage]:§a 34.0"
         - "§2[Regen]:§a 8"
         - "§2[Effects]:§a Speed II"
         - "§2[Ability]:§a Gives weakness and Fatigue on hit."
@@ -568,8 +568,8 @@ orc:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A tank that can throw enemies"
-        - "§2[Health]:§a 350"
-        - "§2[Melee Damage]:§a 20.0"
+        - "§2[Health]:§a 450"
+        - "§2[Melee Damage]:§a 30.0"
         - "§2[Regen]:§a 16"
         - "§2[Effects]:§a Fatigue, Night Vision"
         - "§2[Ability]:§a Can pick up and throw enemies."
@@ -596,8 +596,8 @@ dwarves:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a An ranged/melee unit that can throw axes"
-        - "§2[Health]:§a 145"
-        - "§2[Melee Damage]:§a 25.0"
+        - "§2[Health]:§a 245"
+        - "§2[Melee Damage]:§a 35.0"
         - "§2[Regen]:§a 10"
         - "§2[Effects]:§a Haste"
         - "§2[Ability]:§a Can throw axes really fast"
@@ -613,8 +613,8 @@ dwarves:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A tank that makes good use of his shield."
-        - "§2[Health]:§a 210"
-        - "§2[Melee Damage]:§a 31"
+        - "§2[Health]:§a 310"
+        - "§2[Melee Damage]:§a 41"
         - "§2[Regen]:§a 8"
         - "§2[Effects]:§a Resistance I, Fatigue"
         - "§2[Ability]:§a Gets buffs when shot whilst shielding."
@@ -630,8 +630,8 @@ dwarves:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a A ranged unit that throws 3 spears."
-        - "§2[Health]:§a 140"
-        - "§2[Melee Damage]:§a 19.0"
+        - "§2[Health]:§a 240"
+        - "§2[Melee Damage]:§a 29.0"
         - "§2[Regen]:§a 9"
         - "§2[Effects]:§a Speed I"
         - "§2[Ability]:§a Throws multiple spears at once."
@@ -658,8 +658,8 @@ english:
       lore:
         - "§4------------------------------"
         - "§2[Desc]:§a A royal knight on a tanky horse!"
-        - "§2[Health]:§a 200"
-        - "§2[Melee Damage]:§a 25.5"
+        - "§2[Health]:§a 300"
+        - "§2[Melee Damage]:§a 35.5"
         - "§2[Regen]:§a 5"
         - "§2[Ability]:§a Can spawn a royal steed!"
         - "§2[Status]:§a Unlocked with coins."
@@ -674,8 +674,8 @@ english:
       lore:
         - "§4------------------------------"
         - "§2[Desc]:§a A ranged unit with an arbalest!"
-        - "§2[Health]:§a 160"
-        - "§2[Melee Damage]:§a 5"
+        - "§2[Health]:§a 300"
+        - "§2[Melee Damage]:§a 35.5"
         - "§2[Regen]:§a 5"
         - "§2[Effects]:§a Slowness 2, Mining fatigue"
         - "§2[Ability]:§a Slower Xbow with stronger arrows."
@@ -702,8 +702,8 @@ thunderstoneGuard:
       lore:
         - "§6------------------------------"
         - "§2[Desc]:§a Flying unit with healing/explosive support"
-        - "§2[Health]:§a 110"
-        - "§2[Melee Damage]:§a 20"
+        - "§2[Health]:§a 210"
+        - "§2[Melee Damage]:§a 30"
         - "§2[Regen]:§a 7"
         - "§2[Effects]:§a Slow falling, haste and speed"
         - "§2[Ability]:§a Can drop 3 boms, health package, glide in the air!"
